# game_of_life

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/core_game/: game.rs  mod.rs
