[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"
authors = ["Tot0p"]
description = "Conway's Game of Life"
repository = "https://github.com/tot0p/game_of_life"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
piston_window = "*"